feat: window functions and ROLLUP/CUBE/GROUPING SETS
Window functions (OVER):
- New WindowSpec IR node (PARTITION BY / ORDER BY / frame with
  ROWS|RANGE bounds incl. UNBOUNDED/CURRENT ROW/offset PRECEDING|FOLLOWING)
- FunctionCall carries an optional mutable windowSpec
- SparkExpressionBuilder parses windowDef (windowRef/named windows and
  aggregate FILTER still throw explicitly), IrVisitor recurses into
  window exprs, generator emits 'OVER (...)'

ROLLUP / CUBE / GROUPING SETS:
- Aggregate gains GroupingAnalytics (ROLLUP/CUBE carry one expr list,
  GROUPING_SETS carries sets); legacy 'GROUP BY a,b WITH ROLLUP' and
  'GROUPING SETS (...)' forms map onto the same IR
- HAVING rewrapping preserves groupingAnalytics
- Generator emits 'GROUP BY a, ROLLUP(b, c)' style clauses

BETWEEN now serializes as standard 'x BETWEEN lo AND hi' syntax
instead of a between() function call DuckDB does not provide.

L1 TpcdsQueryPipelineTest: UNSUPPORTED is now empty, 136/136 queries
translate. L3 TpcdsGoldenResultTest adds q22 (ROLLUP, 9 rows incl.
NULL rollup levels) and q98 (sum-over-sum window) calibrated to Spark
semantics; MiniData grows warehouse/inventory tables and extra
date_dim/item columns. mvn clean test: 147 green, 0 skipped.